# macOS-dictate

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  THREAT_MODEL.md  com.dictate.app.plist.template  entitlements.plist  install.sh  justfile  mkdocs.yml  pyproject.toml  requirements-build.txt  requirements-docs.txt  requirements-tools.in  requirements-tools.txt  requirements.txt  run.sh  setup_app.py  uninstall.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml  qa.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml  scorecard.yml
Formula/: dictate.rb
assets/: dictate.sdef  icon.icns
bench/: README.md  bench_asr.py  bench_pipeline.py
bench/fixtures/: README.md
bench/results/: README.md
config/: app_map.yaml  backends.yaml  commands.yaml  presets.yaml  redact.yaml  settings.yaml
config/vocab/: code.txt  personal.txt  replacements.txt  replacements.yaml  work.txt
config/vocab/projects/: README.md
dictate/: __main__.py  _filelock.py  app.py  asr.py  asr_apple.py  asr_mlx.py  asr_parakeet.py  audio_cues.py  cleanup.py  code_grammar.py  commands.py  config.py  conflicts.py  context.py  daemon.py  doctor.py  endpoint.py  health.py  history.py  hotkey.py  hotkey_config.py  hud.py  icons.py  indicator.py  launch_agent.py  learn.py  logging_setup.py  menubar.py  onboarding.py  permissions.py  project_detect.py  punctuate.py  recorder.py  redact.py  replacements.py  safety.py  typer.py  url_scheme.py  vad.py  vocab.py
dictate/webui/: __init__.py  __main__.py  routes.py  server.py  store.py
dictate/webui/static/: app.css  app.js  settings.js
dictate/webui/templates/: _brand_mark.html  _empty.html  base.html  dashboard.html  detail.html  index.html  settings.html  stats.html
docs/: applescript.md  architecture.md  build-app.md  changelog.md  cli.md  code-dictation.md  compare.md  faq.md  first-run.md  github-setup.md  homebrew-tap.md  index.md  permissions.md  pre-launch-checklist.md  raycast.md  recipes.md  roadmap.md  third-party-notices.md  threat-model.md  troubleshooting.md  url-scheme.md  usage.md  vocab.md  voice-commands.md  webui.md
docs/assets/: dictate.css
raycast/: .eslintrc.json  README.md  package.json  tsconfig.json
raycast/src/: open-history.tsx  open-settings.tsx  record.tsx  stop.tsx  toggle.tsx
scripts/: build_app.sh  compute_release_sha.sh  dictate-shim.sh  dictate-web-shim.sh  notarize_app.sh  release.sh  sign_app.sh  spike_sfspeech.py
tests/: test_asr_dispatch.py  test_asr_mlx.py  test_asr_parakeet.py  test_audio_cues.py  test_cleanup_circuit.py  test_cleanup_prompt.py  test_cli.py  test_code_grammar.py  test_commands.py  test_config.py  test_conflicts.py  test_context.py  test_daemon.py  test_doctor.py  test_e2e_fixture.py  test_history.py  test_hotkey.py  test_hotkey_config.py  test_icons.py  test_indicator.py  test_launch_agent.py  test_learn.py  test_phase_redact.py  test_project_detect.py  test_punctuate.py  test_recorder.py  test_redact.py  test_replacements.py  test_safety.py  test_typer.py  test_url_scheme.py  test_vad.py  test_vad_integrity.py  test_vocab.py  test_webui.py  test_webui_settings.py
