[project]
name = "dictate"
version = "0.1.0"
description = "Privacy-first, self-hosted voice typing for macOS"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "dictate contributors" }]
keywords = ["voice", "dictation", "speech-to-text", "whisper", "macos", "privacy", "menubar"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "pyobjc-core>=10.3",
    "pyobjc-framework-Cocoa>=10.3",
    "pyobjc-framework-Quartz>=10.3",
    "pyobjc-framework-AVFoundation>=10.3",
    "pyobjc-framework-ApplicationServices>=10.3",
    "pyobjc-framework-Speech>=10.3",
    "rumps>=0.4.0",
    "faster-whisper>=1.0.3",
    "onnxruntime>=1.19.0",
    "numpy>=1.26",
    "sounddevice>=0.4.6",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "jinja2>=3.1",
]

[project.scripts]
dictate = "dictate.__main__:main"
dictate-web = "dictate.webui:main"

[project.optional-dependencies]
dev = [
    "bandit>=1.7",
    "pip-audit>=2.7",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/lewiswigmore/dictate"
Repository = "https://github.com/lewiswigmore/dictate"
Issues = "https://github.com/lewiswigmore/dictate/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dictate"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101"]
