[project]
name = "dictate"
version = "0.1.0"
description = "Privacy-first, self-hosted voice typing for macOS"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "dictate contributors" }]
keywords = ["voice", "dictation", "speech-to-text", "whisper", "macos", "privacy", "menubar"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "pyobjc-core>=12.2",
    "pyobjc-framework-Cocoa>=12.2",
    "pyobjc-framework-Quartz>=12.2",
    "pyobjc-framework-AVFoundation>=12.2",
    "pyobjc-framework-ApplicationServices>=12.2",
    "pyobjc-framework-Speech>=12.2",
    "rumps>=0.4.0",
    "faster-whisper>=1.2.1",
    "onnxruntime>=1.26.0",
    "numpy>=2.4.6",
    "sounddevice>=0.5.5",
    "pyyaml>=6.0.3",
    "httpx>=0.28.1",
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
    "jinja2>=3.1.6",
]

[project.scripts]
dictate = "dictate.__main__:main"
dictate-web = "dictate.webui:main"

[project.optional-dependencies]
dev = [
    "bandit>=1.9.4",
    "pip-audit>=2.10.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
]

[project.urls]
Homepage = "https://github.com/lewiswigmore/macOS-dictate"
Repository = "https://github.com/lewiswigmore/macOS-dictate"
Issues = "https://github.com/lewiswigmore/macOS-dictate/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dictate"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101"]
